--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" href="assets/vendor/spinkit.css" rel="stylesheet">
 
+  <!-- ajax -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
+
   <!-- Perfect Scrollbar -->
   <link type="text/css" href="assets/vendor/perfect-scrollbar.css" rel="stylesheet">
 
