--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex">
     <link rel="icon" type="image/x-icon" href="/assets/icons/logo_Apolo-light.svg">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CRoboto:400,500%7CExo+2:600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CRoboto:400,500%7CExo+2:600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" href="assets/vendor/spinkit.css" rel="stylesheet">
 
@@ -33,7 +32,7 @@
     <link type="text/css" href="assets/css/app.css" rel="stylesheet">
 </head>
 
-<body class="layout-mini layout-mini">
+<body class="layout-sticky-subnav layout-learnly ">
 
     <div class="preloader">
         <div class="sk-chase">
@@ -88,22 +87,6 @@
     <!-- Preloader -->
     <script src="assets/js/preloader.js"></script>
 
-    <!-- Sidebar Mini JS -->
-    <script src="assets/js/sidebar-mini.js"></script>
-    <script>
-        (function () {
-            'use strict';
-            // ENABLE sidebar menu tabs
-            $('.js-sidebar-mini-tabs [data-toggle="tab"]').on('click', function (e) {
-                e.preventDefault()
-                $(this).tab('show')
-            })
-            $('.js-sidebar-mini-tabs').on('show.bs.tab', function (e) {
-                $('.js-sidebar-mini-tabs > .active').removeClass('active')
-                $(e.target).parent().addClass('active')
-            })
-        })()
-    </script>
 
 </body>
 
