--- a/src/index.html
+++ b/src/index.html
@@ -43,25 +43,12 @@
             <div class="sk-chase-dot"></div>
             <div class="sk-chase-dot"></div>
         </div>
-
-        <!-- <div class="sk-bounce">
-<div class="sk-bounce-dot"></div>
-<div class="sk-bounce-dot"></div>
-</div> -->
-
-        <!-- More spinner examples at https://github.com/tobiasahlin/SpinKit/blob/master/examples.html -->
     </div>
 
-    <!-- Drawer Layout -->
+    <!-- <div class="mdk-header-layout js-mdk-header-layout"> -->
+    <app-root></app-root>
+    <!-- </div> -->
 
-    <!-- Header Layout -->
-    <div class="mdk-header-layout js-mdk-header-layout">
-        <app-root></app-root>
-    </div>
-
-    <!-- // END drawer-layout__content -->
-
-    </div>
 
     <!-- // END Drawer Layout -->
 
@@ -86,7 +73,6 @@
 
     <!-- Preloader -->
     <script src="assets/js/preloader.js"></script>
-
 
 </body>
 
