--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
         </div>
     </div>
 
-    <!-- <div class="mdk-header-layout js-mdk-header-layout"> -->
-    <app-root></app-root>
-    <!-- </div> -->
+    <div class="mdk-header-layout js-mdk-header-layout">
+        <app-root></app-root>
+    </div>
 
 
     <!-- // END Drawer Layout -->
